--- a/teammanager/src/main/resources/templates/personList.html
+++ b/teammanager/src/main/resources/templates/personList.html
@@ -8,13 +8,14 @@
 <body>
     <div class="container">
 
-        <a th:href="@{/person/hello}">НОВЫЙ </a>
+        <a th:href="@{/person/list}">НОВЫЙ </a>
         <table class="table table-striped">
             <thead>
             <tr>
                 <th>ID</th>
                 <th>Name</th>
                 <th>Lastname</th>
+                <th>Delete</th>
             </tr>
             </thead>
             <tbody>
@@ -22,6 +23,9 @@
                 <td th:text="${person.id}"></td>
                 <td th:text="${person.name}"></td>
                 <td th:text="${person.lastName}"></td>
+                <td>
+                    <a th:href="@{/person/delete/{id}(id=${person.id})}">DELETE </a>
+                </td>
             </tr>
             </tbody>
         </table>
