--- a/teammanager/src/main/resources/templates/personList.html
+++ b/teammanager/src/main/resources/templates/personList.html
@@ -21,15 +21,13 @@
             <tbody>
             <tr th:each="person : ${personList}">
                 <td th:text="${person.id}" th:name="id"></td>
-
-
                 <td>
                     <a th:title="Редактирование"
                        th:href="@{/person/edit/{id}(id=${person.id})}"
                        th:text="${person.name}">
                     </a>
                 </td>
-                <td th:text="${person.name}" th:name="name"> </td>
+                <!--<td th:text="${person.name}" th:name="name"> </td>-->
                 <td th:text="${person.lastName}" th:name="lastname"></td>
                 <td>
                     <a th:href="@{/person/delete/{id}(id=${person.id})}">DELETE </a>
